@@ -1,3 +1,4 @@
+issue32
 *.o
 *.lo
 *.la
