@@ -1,3 +1,6 @@
+Mar 23, 2014 - chris ---------------------------------------------------
+o Added a unittest for issue #32
+
 Mar 21, 2014 - chris ---------------------------------------------------
 o Fixed a journalling bug; partial records were not logged correctly
 
